更新：优化界面与操作逻辑

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -44,6 +44,8 @@ add_executable(${PROJECT_NAME}
     mainwindow.cpp
     ply_processor.cpp
     ply2tiff_converter.cpp
+    resources/resources.qrc
+    app.rc
 )
 
 # 链接Qt库
