更新：线扫相机增加数据通道顺序选项；支持面阵相机的数据转换

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,7 +17,7 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 # ##########################################################
 # # Setting path for 3rd party libraries
 # ##########################################################
-set(QT_LIBRARY_DIR ${CMAKE_SOURCE_DIR}/../../software CACHE PATH "The path to third party library")  # set to the relative path to current CmakeLists.txt
+set(QT_LIBRARY_DIR "D:/Qt" CACHE PATH "The path to third party library")  # set to the relative path to current CmakeLists.txt
 set(THIRD_PARTY_LIBRARY_DIR ${CMAKE_SOURCE_DIR}/../3rdParty CACHE PATH "The path of third party libraries.")  # set to the relative path to current CmakeLists.txt
 
 if (NOT DEFINED CMAKE_BUILD_TYPE)
@@ -25,7 +25,7 @@ if (NOT DEFINED CMAKE_BUILD_TYPE)
     set(CMAKE_BUILD_TYPE "Release")
 endif()
 # Qt5
-set(Qt5_DIR ${QT_LIBRARY_DIR}/Qt5.14.2/5.14.2/msvc2017_64/lib/cmake/Qt5)
+set(Qt5_DIR ${QT_LIBRARY_DIR}/Qt5.12.8/5.12.8/msvc2017_64/lib/cmake/Qt5)
 message(STATUS "Qt5_DIR = " ${Qt5_DIR})
 # find_package(Qt5 REQUIRED PATHS ${Qt5_DIR})
 find_package(Qt5 COMPONENTS Widgets REQUIRED)
@@ -40,12 +40,18 @@ include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)
 
 # 添加可执行文件
 add_executable(${PROJECT_NAME}
-    main.cpp
-    mainwindow.cpp
-    ply_processor.cpp
-    ply2tiff_converter.cpp
+    src/main.cpp
+    src/mainwindow.cpp
+    include/mainwindow.h
+    src/ply_processor.cpp
+    include/ply_processor.h
+    src/advanced_ply_processor.cpp
+    include/advanced_ply_processor.h
+    src/a_ply2tiff_converter.cpp
+    include/a_ply2tiff_converter.h
+    src/ply2tiff_converter.cpp
     resources/resources.qrc
-    app.rc
+    resources/app.rc
 )
 
 # 链接Qt库
@@ -72,5 +78,13 @@ target_link_libraries(${PROJECT_NAME} ${OpenCV_LIBS})
 target_include_directories(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/include)
 
 #注释掉可以保留运行时的终端
-
 Set_Target_Properties(${PROJECT_NAME} PROPERTIES LINK_FLAGS_RELEASE "/SUBSYSTEM:WINDOWS /ENTRY:mainCRTStartup")
+
+# 设置MSVC编译器选项，确保正确处理UTF-8源文件
+# /utf-8 选项等同于 /source-charset:utf-8 /execution-charset:utf-8
+# 这确保源文件和执行字符集都使用UTF-8编码，解决中文常量编译错误
+if(MSVC)
+    target_compile_options(${PROJECT_NAME} PRIVATE /utf-8)
+    # 同时设置全局编译选项作为备用
+    add_compile_options("$<$<C_COMPILER_ID:MSVC>:/utf-8>")
+endif()
